--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,11 @@ version: "3.7"
 
 services:
   app:
+    working_dir: /app
     build:
       context: .
       dockerfile: Dockerfile
       args:
         - NODE_VERSION_TAG=${NODE_VERSION_TAG}
+    volumes:
+      - ./:/app
