[Add] Gatsbyのportをdocker-composeで開けるようにする

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,7 @@ services:
       dockerfile: Dockerfile
       args:
         - NODE_VERSION_TAG=${NODE_VERSION_TAG}
+    ports:
+      - 8000:8000
     volumes:
       - ./:/app
